--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ LICENSE: MIT
     <div class="container">  
       
       <form id="loginForm" action="#">
-        <center><a href="http://www.merakipopuptour.com/"><img src="./img/The Meraki Pop-Up Tour-Type Only-15.png" width="50%"/></a></center>
+        <center><a href="http://www.merakipopuptour.com/"><img src="./img/The Meraki Pop-Up Tour-Type Only-15.jpg" width="50%"/></a></center>
         <br>
         <fieldset>
           <input id="firstname" placeholder="First name" type="text" tabindex="1" required autofocus>
@@ -39,12 +39,8 @@ LICENSE: MIT
           <input id="email" placeholder="Your Email Address" type="email" tabindex="2" required>
         </fieldset>
         <fieldset>
-          <input id="company" placeholder="Your Company (optional)" type="text" tabindex="3">
-        </fieldset>
-        <fieldset>
           <button type="submit" >Log in to WiFi</button>
         </fieldset>
-        <p class="copyright">Sample by <a href="http://www.InternetOfLEGO.com" target="_blank" title="Internet of LEGO">Internet of LEGO</a></p>
       </form>
     </div>
     <hr>
